--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Set Atlas Cluster URI
         env: 
-          ATLAS_URI: ${{ secrets.ATLAS_URI }}
-        run: echo "ATLAS_URI=$ATLAS_URI" > .env && echo "DB_NAME=pymongo_tutorial" >> .env
+          MONGO_CONNECTION: ${{ secrets.MONGO_CONNECTION }}
+        run: echo "MONGO_CONNECTION=$MONGO_CONNECTION" > .env && echo "DB_NAME=test1" >> .env
 
       - name: Run tests
         run: python -m pip install pytest && python -m pytest
