--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-MONGO_CONNECTION=
-DB_NAME=
+MONGO_CONNECTION=mongodb+srv://mongo:<pwd>@tgbot-cluser.6goodre.mongodb.net/?retryWrites=true&w=majority
+DB_NAME=main
 ENVIRONMENT=
 BOT_TOKEN=
 JWT_ALG=
-JWT_ACCESS_
+JWT_ACCESS_SECRET_KEY=
 OWNER_ID=
